--- a/install-files/settings/home_audioserver_.config/systemd/user/audioserver-user-first-run.service
+++ b/install-files/settings/home_audioserver_.config/systemd/user/audioserver-user-first-run.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=audioserver system first run script
-ConditionPathExistsGlob=!/home/audioserver/user.version
+ConditionPathExistsGlob=!/settings/audioserver/user.version
 
 [Service]
 Type=oneshot
