update to zesty, small changes

--- a/install-files/settings/home_audioserver_.config/mopidy/mopidy.conf
+++ b/install-files/settings/home_audioserver_.config/mopidy/mopidy.conf
@@ -8,20 +8,20 @@
 [logging]
 
 [audio]
-#output = audioconvert ! lamemp3enc target=1 bitrate=256 cbr=true ! shout2send ip=127.0.0.1 port=8000 password=AUDIOSERVERPASSWORD mount=mopidy.mp3
+#output = audioconvert ! lamemp3enc target=1 bitrate=256 cbr=true ! shout2send ip=127.0.0.1 port=8000 password=MACHINE_PASSWORD mount=mopidy.mp3
 output = pulsesink device=broadcast_on_lan
 
 [proxy]
 
 [mpd]
 enabled = true
-hostname = AUDIOSERVERHOSTNAME
+hostname = MACHINE_HOSTNAME
 port = 6600
 password = mopidy
 
 [http]
 enabled = true
-hostname = AUDIOSERVERHOSTNAME
+hostname = MACHINE_HOSTNAME
 port = 6680
 
 [stream]
