--- a/install-files/settings/home_audioserver_.config/systemd/user/user-first-run.service
+++ b/install-files/settings/home_audioserver_.config/systemd/user/user-first-run.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=audioserver system first run script
+Description=user first run script
 ConditionPathExistsGlob=!/settings/audioserver/user.version
 
 [Service]
