--- a/install-files/settings/home_audioserver_.config/systemd/user/user-update.service
+++ b/install-files/settings/home_audioserver_.config/systemd/user/user-update.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=audioserver user update script
+Description=user update script
 ConditionPathExistsGlob=/settings/audioserver/user.version
 
 [Service]
