--- a/install-files/settings/home_audioserver_.config/pulse/daemon.conf
+++ b/install-files/settings/home_audioserver_.config/pulse/daemon.conf
@@ -26,10 +26,11 @@
 ; use-pid-file = yes
 ; system-instance = no
 ; local-server-type = user
-; enable-shm = yes
+enable-shm = yes
 ; shm-size-bytes = 0 # setting this 0 will use the system-default, usually 64 MiB
 ; lock-memory = no
 ; cpu-limit = no
+enable-memfd = false ; seems to make problems
 
 high-priority = yes
 nice-level = -11
@@ -51,7 +52,7 @@ default-script-file = /home/audioserver/.config/pulse/default.pa
 ; log-time = no
 ; log-backtrace = 0
 
-; resample-method = speex-float-1
+resample-method = speex-float-3
 ; resample-method = trivial
 ; enable-remixing = yes
 ; enable-lfe-remixing = no
@@ -74,13 +75,13 @@ flat-volumes = no
 ; rlimit-rtprio = 9
 ; rlimit-rttime = 1000000
 
-; default-sample-format = s16le
+default-sample-format = s16le
 ; default-sample-rate = 44100
-; default-sample-rate = 48000
+default-sample-rate = 48000
 ; alternate-sample-rate = 48000
 ; alternate-sample-rate =44100
-; default-sample-channels = 2
-; default-channel-map = front-left,front-right
+default-sample-channels = 2
+default-channel-map = front-left,front-right
 
 default-fragments = 8
 default-fragment-size-msec = 10
