--- a/install-files/settings/home_audioserver_.config/systemd/user/audioserver_pulseaudio.service
+++ b/install-files/settings/home_audioserver_.config/systemd/user/audioserver_pulseaudio.service
@@ -7,6 +7,7 @@ Type=simple
 BusName=org.PulseAudio1
 Environment=DBUS_SESSION_BUS_ADDRESS=unix:path=%t/bus
 #Environment=PULSE_LATENCY_MSEC=60 #maybe possible to erase, maybe set to 30
+#Environment=PULSE_LATENCY_MSEC=30
 Environment=PULSE_CONFIG=/home/audioserver/.config/pulse/daemon.conf
 StandardOutput=null
 ExecStartPre=/bin/sh -c "( [ -e /run/user/1000/snapfifo ] || mkfifo /run/user/1000/snapfifo )"
