switch to sample rate of 44100 for more performance on the raspberry pi

--- a/install-files/settings/home_audioserver_.config/mopidy/mopidy.conf
+++ b/install-files/settings/home_audioserver_.config/mopidy/mopidy.conf
@@ -9,7 +9,7 @@
 
 [audio]
 #output = audioconvert ! lamemp3enc target=1 bitrate=256 cbr=true ! shout2send ip=127.0.0.1 port=8000 password=MACHINE_PASSWORD mount=mopidy.mp3
-output = audioconvert ! audio/x-raw,rate=48000,channels=2,format=S16LE ! pulsesink device=broadcast_on_lan
+output = audioresample ! audioconvert ! audio/x-raw,rate=44100,channels=2,format=S16LE ! pulsesink device=broadcast_on_lan
 
 [proxy]
 
